# agrogame

./: .coveragerc  .cursorignore  .flake8  .gdlintrc  .gitattributes  .gitignore  .importlinter  .pre-commit-config.yaml  404.html  CLAUDE.md  CODEOWNERS  Makefile  README.md  index.html  knowledge-base-schema.json  mkdocs.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  vulture-whitelist.py
.claude/commands/: art-generator.md  backlog.md  create-issue.md  dev-address-review.md  dev-address-reviews.md  dev-implement.md  dev-implements.md  po-review.md  po-reviews.md  review-pr.md  review-prs.md  tech-refine.md
.cursor/: rules.md
.cursor/rules/: ci-and-precommit.mdc  ci.mdc  dashboard-guidelines.mdc  docs-and-mkdocs.mdc  docs.mdc  events-system.mdc  events.mdc  jira-workflow.mdc  jira.mdc  python-style-and-quality.mdc  repo-structure-and-owners.mdc  tests-and-ci-parity.mdc  workflow.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmarks.yml  ci.yml  codeql.yml  docs-deploy.yml  godot.yml  playwright.yml  python.yml  quality.yml
.hypothesis/constants/: 029d6d925f9f1550  031fe350771aff11  11c0b1973ec51107  15152fbd70d50897  2adab916add08c30  3e45ef984dc05de9  440289441fc7600e  4b60da9b1d707e69  793818fd631d0220  850df7132f435ae8  88096e01706d80a4  8aeeb45973a04466  97095b5ac3a6ee53  9b97bb1cb24e5e77  aa3846e1a7166d52  f536a8d558741ba0  f69d9c7cb361d722  fa5b7ebe7c7ce70d
adr/ADR-001-game-state-persistence/: index.html
adr/ADR-002-multi-field-architecture/: index.html
adr/ADR-003-economic-model/: index.html
adr/ADR-004-game-loop-turn-system/: index.html
adr/ADR-005-frontend-architecture/: index.html
adr/ADR-006-performance-strategy/: index.html
adr/ADR-007-3d-rendering-migration/: index.html
adr/ADR-008-import-layering/: index.html
adr/ADR-009-biopore-calibration/: index.html
adr/ADR-010-pore-chain-phase-ordering/: index.html
adr/ADR-011-dashboard-facade/: index.html
adr/ADR-012-biomass-partitioning/: index.html
adr/ADR-013-plant-nitrogen-stock/: index.html
adr/_template/: index.html
agrogame/: __init__.py  cli.py
agrogame/analysis/: __init__.py  stats.py
agrogame/api/: __init__.py  app.py  dashboard_facade.py  forecast.py  models.py  routes.py  state.py
agrogame/atmosphere/: __init__.py
agrogame/config/: __init__.py  cli.py  compose.py  events.py  validation.py  watcher.py  wizard.py
agrogame/dashboard/: app.py  charts.py  export.py  simulation.py
agrogame/events/: __init__.py  (+4 more)
api/: index.html
api-events/: index.html
architecture/: index.html
art-guide/: index.html
atmosphere/: index.html
calibration/: index.html
canopy/: index.html
configuration/: index.html
contributing/: index.html
conventions/: index.html
dashboard/: index.html
docs/: README.md  api-events.md  api.md  architecture.md  art-guide.md  atmosphere.md  calibration.md  canopy.md  configuration.md  conventions.md  dashboard.md  et.md  evaporation-residue.md  events.md  game.md  getting-started.md  index.md  interception.md  knowledge-base.md  microbial.md  microbial_tutorial.md  nitrogen.md  phenology.md  phosphorus.md  plant.md  plots.md  quality-bar.md  research-correctness.md  sensitivity.md  sim.md  soil.md  validation.md  water.md  weather.md
et/: index.html
evaporation-residue/: index.html
events/: index.html
game/: .gutconfig.json  index.html  project.godot
getting-started/: index.html
interception/: index.html
knowledge-base/: index.html
microbial/: index.html
microbial_tutorial/: index.html
nitrogen/: index.html
phenology/: index.html
phosphorus/: index.html
plant/: index.html
plots/: index.html
quality-bar/: index.html
research-correctness/: index.html
samples/: crops.yaml
scripts/: _viz_constants.py  _weather_cli.py  architecture_diagrams.py  bayesian_calibration.py  benchmark_trajectories.py  check_class_docstrings.py  check_defensive_coding.py  check_docs_coverage.py  check_expectations.py  compare_series.py  dashboard.py  diagnose_benchmarks.py  export_events_graphviz.py  extract_pdf_to_markdown.py  fetch_benchmark_weather.py  generate_reference_trajectories.py  import_parameters.py  plot_et_timeseries.py  plot_events_dependencies.py  plot_events_heatmap.py  plot_events_timeline.py  plot_full_integration.py  plot_interception_isolation.py  plot_microbes_activity_depth.py  plot_microbes_activity_surface.py  plot_microbes_depth.py  plot_microbes_diagnostics.py  plot_microbes_enzyme_depth.py  plot_microbes_split.py  plot_microbes_suite.py  plot_microbes_timeseries.py  plot_nitrogen_timeseries.py  plot_phenology_canopy.py  plot_phosphorus_timeseries.py  plot_roots_compare.py  plot_roots_timeseries.py  plot_water_timeseries.py  post_restructure_analysis.py  process_cross_section_textures.sh  process_leaf_masks.sh  (+4 more)
search/: search_index.json
sensitivity/: index.html
sim/: index.html
site/: 404.html  index.html
soil/: index.html
soil-microbiology/: index.html
soils/: presets.yaml
tests/: conftest.py  test_aggregate_protection.py  test_aggregation.py  test_aggregation_wiring.py  test_api.py  test_bayesian_calibration.py  test_benchmark_trajectories.py  test_benchmarks.py  test_biomass_coverage.py  test_biomass_partitioning.py  test_biopores.py  test_builder.py  test_builder_coverage.py  test_builder_utils.py  test_calendar.py  test_canopy.py  test_canopy_coverage.py  test_canopy_events.py  test_canopy_grain_sink_source.py  test_cardinal_temp.py  test_check_class_docstrings.py  test_check_docs_coverage.py  test_cli.py  test_climate_overrides.py  test_climate_presets.py  test_compare_series_cli.py  test_config_cli.py  test_config_coverage.py  test_config_validation.py  test_config_validation_errors.py  test_config_watcher.py  test_config_wizard.py  test_crop_presets.py  test_crop_rotation.py  test_dashboard_import.py  test_dual_porosity.py  test_economy.py  test_engine_cli.py  test_engine_coverage.py  test_environmental_cache.py  (+65 more)
validation/: index.html
water/: index.html
weather/: index.html
(+558 files in other folders)
