[tool.poetry]
name = "agrogame-simulation"
version = "0.1.0"
description = "Soil-plant-atmosphere simulation engine for farming game"
authors = ["Data Build Company <edwin.dejong@databuildcompany.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "agrogame" }]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0"
pyyaml = "^6.0"
jsonschema = "^4.23"
watchdog = "^4.0"
plotly = {version = "^5.22", optional = true}
streamlit = {version = "^1.54", optional = true}
fastapi = {version = "^0.115", optional = true}
uvicorn = {version = "^0.42.0", optional = true}

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6"
mkdocs-material = "^9.5"
mkdocstrings = "^0.26"
mkdocstrings-python = "^1.10"
mkdocs-autorefs = "^1.2"
pytest = "^7.0"
pytest-cov = "^4.0"
black = "^24.3"
flake8 = "^6.0"
mypy = "^1.0"
pre-commit = "^3.0"
flake8-bugbear = "*"
flake8-comprehensions = "*"
types-PyYAML = "*"
hypothesis = "^6.0"
ruff = "^0.5.0"
matplotlib = "^3.9"
xenon = "^0.9.1"
radon = "^6.0.1"
import-linter = "^2.0"
deptry = "^0.20.0"
vulture = "^2.11"
numpy = "^1.24"
pandas = "^2.0"
pypdf = "^6.9.2"
salib = ">=1.4,<1.5"
emcee = "^3.1"
corner = "^2.2"
pytest-xdist = "^3.8.0"
httpx = "^0.28.1"
interrogate = "^1.7.0"

[tool.poetry.scripts]
simulate = "agrogame.cli:main"
agrogame = "agrogame.config.cli:main"
arch-check = "importlinter.cli:main"
complexity-check = "xenon.__main__:main"
dep-check = "deptry.__main__:main"
dashboard = "agrogame.dashboard.app:main"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
extend-exclude = [
    ".cache",
    ".cache/*",
    "site",
    "site/*",
]

[tool.mypy]
files = ["agrogame"]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_return_any = true
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true

# Strict typing on a per-package basis is enforced via a separate
# mypy invocation in CI (`poetry run mypy --strict agrogame/events`).
# Wiring it through [[tool.mypy.overrides]] caused strict flags to
# leak into transitive importers in mypy 1.19, so the CI step is the
# source of truth — see docs/quality-bar.md for the promotion roadmap.

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "C4", "RUF", "UP"]
# Em-dashes (—), curly quotes ("/"), and similar punctuation are intentional
# in our docstrings, comments, and (rarely) string literals — flagging them
# as "ambiguous unicode" creates noise without security benefit.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
# matplotlib.use("Agg") must run before pyplot import — ruff doesn't flag
# E402 for this pattern (it makes exceptions only for sys.path/os.environ),
# but flake8 does, so the noqa: E402 directives are needed for flake8.
# RUF100 sees them as unused and would strip them.
"scripts/architecture_diagrams.py" = ["RUF100"]
# Same flake8/ruff disagreement: flake8 flags `from .cycle import *` as F401
# unused, ruff doesn't. The noqa is required for flake8.
"agrogame/soil/nitrogen/module.py" = ["RUF100"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.interrogate]
# Project-wide docstring-coverage floor. Phase 3 of #293 prescribes 90% as
# the eventual target; the current baseline is ~53% (a follow-up tracks the
# bulk fill). The floor is set as a ratchet — each subsequent PR raises it
# until we hit 90%. The 100% gate on *Params/*State/*Module/*Runtime classes
# is enforced separately by scripts/check_class_docstrings.py, since
# interrogate cannot key on a name pattern alone.
fail-under = 50
exclude = ["agrogame/dashboard", "agrogame/plots"]
ignore-init-module = true
ignore-init-method = true
ignore-magic = true
ignore-private = true
ignore-property-decorators = true
ignore-nested-functions = true
ignore-nested-classes = true
verbose = 1
quiet = false
omit-covered-files = false
color = true

[tool.pytest.ini_options]
addopts = "--maxfail=1 --disable-warnings --cov=agrogame --cov-report=term-missing --cov-config=.coveragerc --cov-fail-under=92"
testpaths = ["tests"]

[tool.radon]
exclude = ["tests", "build", "dist", "docs", "out"]

[tool.xenon]
max-average = "B"
max-modules = "B"
max-absolute = "C"
ignore = ["tests/*", "docs/*", "out/*"]

[tool.deptry]
known_first_party = ["agrogame"]
exclude = ["tests", "docs", "build", "dist", "out", ".cache", "scripts", "agrogame/plots"]
ignore_notebooks = true
[tool.deptry.per_rule_ignores]
DEP002 = ["uvicorn"]  # CLI tool, not imported directly

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

# Include non-Python assets (schemas) in the package
[[tool.poetry.include]]
path = "agrogame/config/schemas/*.json"

[tool.poetry.extras]
dashboard = ["plotly", "streamlit"]
api = ["fastapi", "uvicorn"]
